@@ -8,25 +8,19 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.constraints.Pattern;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardOpenOption;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import org.example.exception.LogsException;
 import org.example.exception.ObjectNotFoundException;
-import org.example.exception.ValidationException;
+import org.example.service.LogProcessingService;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -38,48 +32,131 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("/api/logs")
 public class LogsController {
 
-    private static final DateTimeFormatter DATE_FORMATTER =
-            DateTimeFormatter.ofPattern("yyyy-MM-dd");
-    private static final Path LOG_PATH = Paths.get("logs/application.log");
-    private static final Path LOGS_DIR = Paths.get("logs");
+    private final LogProcessingService logProcessingService;
 
-    @SuppressWarnings({"checkstyle:Indentation", "checkstyle:VariableDeclarationUsageDistance"})
+    public LogsController(LogProcessingService logProcessingService) {
+        this.logProcessingService = logProcessingService;
+    }
+
+    @PostMapping
     @Operation(
-            summary = "View or download logs by date",
-            description = "Returns log entries for a specific date."
-            + " If the Accept header is 'application/octet-stream', a file will be downloaded."
+            summary = "Start asynchronous log file creation",
+            description = "Initiates the creation of a log file" 
+                    + " for a specific date and returns a task ID."
     )
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Logs found and returned"),
-            @ApiResponse(responseCode = "400",
-                    description = "Invalid date format or date is in the future"),
-            @ApiResponse(responseCode = "404",
-                    description = "No logs found for the specified date or log file not found"),
-            @ApiResponse(responseCode = "500",
-                    description = "Internal server error while processing log files")
+    @ApiResponses(value = {@ApiResponse(responseCode = "202",
+            description = "Log file creation started, task ID returned"),
+                           @ApiResponse(responseCode = "400",
+                                   description = "Invalid date format or date is in the future")
     })
-    @GetMapping
-    public ResponseEntity<Object> downloadOrViewLogs(
+    public ResponseEntity<String> startLogFileCreation(
             @Parameter(description = "Date in yyyy-MM-dd format",
                     example = "2025-04-24", required = true)
             @RequestParam(name = "date")
             @Pattern(regexp = "\\d{4}-\\d{2}-\\d{2}",
-                    message = "Date must be in yyyy-MM-dd format") String date,
-            @RequestHeader(value = HttpHeaders.ACCEPT,
-                    required = false, defaultValue = MediaType.TEXT_PLAIN_VALUE) String acceptHeader
+                    message = "Date must be in yyyy-MM-dd format") String date) {
+        String taskId = logProcessingService.startLogFileCreation(date);
+        return ResponseEntity.accepted().body(taskId);
+    }
+
+    @GetMapping("/status/{taskId}")
+    @Operation(
+            summary = "Check log file creation status",
+            description = "Returns the status of the log file creation task by task ID."
+    )
+    @ApiResponses(value = {@ApiResponse(responseCode = "200", description = "Status returned"),
+                           @ApiResponse(responseCode = "404", description = "Task ID not found")
+    })
+    public ResponseEntity<LogProcessingService.LogTaskStatus> getLogFileStatus(
+            @Parameter(description = "Task ID of the log file creation",
+                    example = "123e4567-e89b-12d3-a456-426614174000")
+            @PathVariable String taskId) {
+        return ResponseEntity.ok(logProcessingService.getTaskStatus(taskId));
+    }
+
+    @GetMapping("/file/{taskId}")
+    @Operation(
+            summary = "Download log file by task ID",
+            description = "Downloads the log file for a completed task by task ID."
+    )
+    @ApiResponses(value = {@ApiResponse(responseCode = "200", description = "Log file downloaded"), 
+                           @ApiResponse(responseCode = "404",
+                                   description = "Task ID not found or file not available")
+    })
+    public ResponseEntity<InputStreamResource> downloadLogFile(
+            @Parameter(description = "Task ID of the log file creation",
+                    example = "123e4567-e89b-12d3-a456-426614174000")
+            @PathVariable String taskId) throws IOException {
+        Path logFile = logProcessingService.getLogFilePath(taskId);
+        if (!Files.exists(logFile)) {
+            throw new ObjectNotFoundException("Log file not found for task ID: " + taskId);
+        }
+        InputStream inputStream = Files.newInputStream(logFile);
+        InputStreamResource resource = new InputStreamResource(inputStream);
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.add(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=log_" + taskId + ".log");
+        headers.add(HttpHeaders.CACHE_CONTROL, "no-cache, no-store, must-revalidate");
+        headers.add(HttpHeaders.PRAGMA, "no-cache");
+        headers.add(HttpHeaders.EXPIRES, "0");
+
+        ResponseEntity<InputStreamResource> response = ResponseEntity.ok()
+                .headers(headers)
+                .contentLength(Files.size(logFile))
+                .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                .body(resource);
+
+        Files.deleteIfExists(logFile);
+        return response;
+    }
+
+    @GetMapping
+    @Operation(
+            summary = "View or download logs by date",
+            description = "Returns log entries for a specific date. If "
+                    + "the Accept header is 'application/octet-stream', a file will be downloaded."
+    )
+    @ApiResponses(value = {@ApiResponse(responseCode = "200",
+            description = "Logs found and returned"),
+                           @ApiResponse(responseCode = "400",
+                                   description = "Invalid date format or date is in the future"),
+                           @ApiResponse(responseCode = "404",
+                                   description = "No logs found for the specified date or"
+                                          + " log file not found"),
+                           @ApiResponse(responseCode = "500",
+                                   description = "Internal server error while processing log files")
+    })
+    public ResponseEntity<Object> downloadOrViewLogs(
+            @Parameter(description = "Date in yyyy-MM-dd format",
+                    example = "2025-04-24", required = true)
+            @RequestParam(name = "date")
+            @Pattern(regexp = "\\d{4}-\\d{2}-\\d{2}", message = "Date must be in yyyy-MM-dd format")
+            String date,
+            @RequestHeader(value = HttpHeaders.ACCEPT, required = false,
+                    defaultValue = MediaType.TEXT_PLAIN_VALUE) String acceptHeader
     ) throws IOException {
+        String taskId = logProcessingService.startLogFileCreation(date);
+        LogProcessingService.LogTaskStatus status = logProcessingService.getTaskStatus(taskId);
 
-        String filteredLogs = getFilteredLogs(date);
+        while (!"COMPLETED".equals(status.getStatus()) && !"FAILED".equals(status.getStatus())) {
+            try {
+                Thread.sleep(100);
+                status = logProcessingService.getTaskStatus(taskId);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+                throw new LogsException("Interrupted while waiting for log file creation");
+            }
+        }
 
+        if ("FAILED".equals(status.getStatus())) {
+            throw new LogsException("Log file creation failed: " + status.getErrorMessage());
+        }
 
-        Path logFile = LOGS_DIR.resolve(date + ".log");
-        Files.write(logFile, filteredLogs.getBytes(StandardCharsets.UTF_8),
-                StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+        Path logFile = logProcessingService.getLogFilePath(taskId);
+        String filteredLogs = Files.readString(logFile);
 
         if (acceptHeader.contains(MediaType.APPLICATION_OCTET_STREAM_VALUE)) {
-
-            InputStream inputStream = Files.newInputStream(logFile,
-                    StandardOpenOption.DELETE_ON_CLOSE);
+            InputStream inputStream = Files.newInputStream(logFile);
             InputStreamResource resource = new InputStreamResource(inputStream);
 
             HttpHeaders headers = new HttpHeaders();
@@ -88,46 +165,19 @@ public class LogsController {
             headers.add(HttpHeaders.PRAGMA, "no-cache");
             headers.add(HttpHeaders.EXPIRES, "0");
 
-            return ResponseEntity.ok()
+            ResponseEntity<Object> response = ResponseEntity.ok()
                     .headers(headers)
                     .contentLength(Files.size(logFile))
                     .contentType(MediaType.APPLICATION_OCTET_STREAM)
                     .body(resource);
+
+            Files.deleteIfExists(logFile);
+            return response;
         }
 
-
+        Files.deleteIfExists(logFile);
         return ResponseEntity.ok()
                 .contentType(MediaType.TEXT_PLAIN)
                 .body(filteredLogs);
-    }
-
-    private String getFilteredLogs(String date) throws IOException {
-        try {
-            LocalDate logDate = LocalDate.parse(date, DATE_FORMATTER);
-            if (logDate.isAfter(LocalDate.now())) {
-                throw new ValidationException("Date cannot be in the future");
-            }
-        } catch (DateTimeParseException e) {
-            throw new ValidationException("Invalid date format. Please use yyyy-MM-dd");
-        }
-
-        if (!Files.exists(LOG_PATH)) {
-            throw new ObjectNotFoundException("Log file not found");
-        }
-
-        try (Stream<String> lines = Files.lines(LOG_PATH)) {
-
-            String filtered = lines
-                    .filter(line -> line.startsWith(date))
-                    .collect(Collectors.joining("\n"));
-
-            if (filtered.isEmpty()) {
-                throw new ObjectNotFoundException("No log entries found for date: " + date);
-            }
-
-            return filtered;
-        } catch (IOException e) {
-            throw new LogsException("Error reading log file: " + e.getMessage());
-        }
     }
 }
